# Compi-HW3

./: CMakeLists.txt  LICENSE  README.md  Scope.cpp  Scope.h  Semantics.cpp  Semantics.h  parser.ypp  scanner.lex
hw3-tests/: t11.out  t12.out  t14.out  t15.out  t16.out  t19.out  t21.out  t25.out  t26.out  t28.out  t29.out  t3.out  t30.out  t31.out  t33.out  t34.out  t35.out  t36.out  t37.out  t38.out  t4.out  t40.out  t41.out  t43.out  t44.out  t45.out  t49.out  t50.out  t51.out  t52.out  t53.out  t54.out  t55.out  t58.out  t59.out  t7.out
oy/: oy1.out  oy2.out  oy3.out
staff_old/: t02.in  t03-more-function-signatures.in  t04-case1.in  t10-print.in  t17-definition-orders.in  t18-formal-redeclaration.in  t19-redeclare-over-formal.in  t20-definition-orders.in  t20-definition-orders.in.out
uriya/: t1.in  t1.out  t10.in  t10.out  t11.in  t11.out  t12.in  t12.out  t13.in  t13.out  t14.in  t14.out  t15.in  t15.out  t16.in  t16.out  t17.in  t17.out  t2.in  t2.out  t3.in  t3.out  t4.in  t5.in  t5.out  t6.in  t6.out  t7.in  t7.out  t8.in  t9.in  t9.out
